--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -28,6 +28,15 @@
     margin-left: 30px;
   }
 
+  @media only screen and (max-width: 650px){
+    .home {
+     justify-content: center;
+     align-items: center;
+    }
+    .leftSide {
+      display: none;
+    }
+  }
   /* form {
     display: flex;
     flex-direction: column;
